# ItemSystem

./: CMakeLists.txt  README.md  cmake_generate_VS2017.bat
Attribute/: Attribute.cpp  Attribute.h  AttributeSystem.cpp  AttributeSystem.h  ResourceAttribute.cpp  ResourceAttribute.h  TraitAttribute.cpp  TraitAttribute.h
Character/: Character.cpp  Character.h  CharacterComponent.cpp  CharacterComponent.h
Crafting/: CraftingRecipe.cpp  CraftingRecipe.h  CraftingRecipeManager.cpp  CraftingRecipeManager.h  CraftingRequirement.cpp  CraftingRequirement.h  CraftingResult.cpp  CraftingResult.h
Effect/: AttributeEffect.cpp  AttributeEffect.h  Effect.cpp  Effect.h  EffectSystem.cpp  EffectSystem.h  EffectTarget.h  OverTimeEffect.cpp  OverTimeEffect.h  PassiveEffect.cpp  PassiveEffect.h  TemporalEffect.cpp  TemporalEffect.h  TimedEffect.cpp  TimedEffect.h
Item/: Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  ItemTemplate.cpp  ItemTemplate.h  ItemTemplateManager.cpp  ItemTemplateManager.h  Template.h
Item/ItemEffect/: ItemAttributeEffect.cpp  ItemAttributeEffect.h  ItemAttributeEffectTemplate.cpp  ItemAttributeEffectTemplate.h  ItemEffect.cpp  ItemEffect.h  ItemEffectFactory.cpp  ItemEffectFactory.h  ItemEffectTemplate.cpp  ItemEffectTemplate.h  ItemOverTimeEffect.cpp  ItemOverTimeEffect.h  ItemOverTimeEffectTemplate.cpp  ItemOverTimeEffectTemplate.h  ItemPassiveEffect.cpp  ItemPassiveEffect.h  ItemPassiveEffectTemplate.cpp  ItemPassiveEffectTemplate.h  ItemTemporalEffect.cpp  ItemTemporalEffect.h  ItemTemporalEffectTemplate.cpp  ItemTemporalEffectTemplate.h  ItemTimedEffect.cpp  ItemTimedEffect.h  ItemTimedEffectTemplate.cpp  ItemTimedEffectTemplate.h
Item/ItemProperty/: ConsumableProp.cpp  ConsumableProp.h  ConsumablePropTemplate.cpp  ConsumablePropTemplate.h  EquipableProp.cpp  EquipableProp.h  EquipablePropTemplate.cpp  EquipablePropTemplate.h  ItemProperty.cpp  ItemProperty.h  ItemPropertyFactory.cpp  ItemPropertyFactory.h  ItemPropertyTemplate.cpp  ItemPropertyTemplate.h  StackableProp.cpp  StackableProp.h  StackablePropTemplate.cpp  StackablePropTemplate.h
ItemCondition/: ItemCondition.cpp  ItemCondition.h  ItemConditionChain.cpp  ItemConditionChain.h  ItemConditionFactory.cpp  ItemConditionFactory.h  ItemIntegerCondition.cpp  ItemIntegerCondition.h  ItemNullCondition.cpp  ItemNullCondition.h  ItemStringCondition.cpp  ItemStringCondition.h  ItemTagCondition.cpp  ItemTagCondition.h
ItemContainer/: EquipmentSlot.cpp  EquipmentSlot.h  ItemContainer.cpp  ItemContainer.h  ItemInventory.cpp  ItemInventory.h
ItemLoot/: ItemLoot.cpp  ItemLoot.h  ItemLootList.cpp  ItemLootList.h  ItemLootListManager.cpp  ItemLootListManager.h  ItemLootSet.cpp  ItemLootSet.h
doc/headers/Attribute/: Attribute.h  AttributeSystem.h  ResourceAttribute.h  TraitAttribute.h
doc/headers/Character/: Character.h  CharacterComponent.h
doc/headers/Crafting/: CraftingRecipe.h  CraftingRecipeManager.h  CraftingRequirement.h  CraftingResult.h
doc/headers/Effect/: AttributeEffect.h  Effect.h  EffectSystem.h  EffectTarget.h  OverTimeEffect.h  PassiveEffect.h  TemporalEffect.h  TimedEffect.h
doc/headers/Item/: Item.h  ItemFactory.h  ItemTemplate.h  ItemTemplateManager.h  Template.h
doc/headers/ItemCondition/: ItemCondition.h  ItemConditionChain.h  ItemConditionFactory.h  ItemIntegerCondition.h  ItemNullCondition.h  ItemStringCondition.h  ItemTagCondition.h
doc/headers/ItemContainer/: EquipmentSlot.h  ItemContainer.h  ItemInventory.h
doc/headers/ItemLoot/: ItemLoot.h  ItemLootList.h  ItemLootListManager.h  ItemLootSet.h
doc/html/: _attribute_8h.html  _attribute_8h_source.html  _attribute_effect_8h.html  _attribute_effect_8h_source.html  _attribute_system_8h.html  _attribute_system_8h_source.html  _character_8h.html  _character_8h_source.html  _character_component_8h.html  _character_component_8h_source.html  _consumable_prop_8h.html  _consumable_prop_8h_source.html  _consumable_prop_template_8h.html  _consumable_prop_template_8h_source.html  _crafting_recipe_8h.html  _crafting_recipe_8h_source.html  _crafting_recipe_manager_8h.html  _crafting_recipe_manager_8h_source.html  _crafting_requirement_8h.html  _crafting_requirement_8h_source.html  _crafting_result_8h.html  _crafting_result_8h_source.html  _effect_8h.html  _effect_8h_source.html  _effect_system_8h.html  _effect_system_8h_source.html  _effect_target_8h.html  _effect_target_8h_source.html  _equipable_prop_8h.html  _equipable_prop_8h_source.html  _equipable_prop_template_8h.html  _equipable_prop_template_8h_source.html  _equipment_slot_8h.html  _equipment_slot_8h_source.html  _item_8h.html  _item_8h_source.html  _item_attribute_effect_8h.html  _item_attribute_effect_8h_source.html  _item_attribute_effect_template_8h.html  _item_attribute_effect_template_8h_source.html  (+267 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  (+11 more)
(+22 files in other folders)
